cursive-bootstrap/tests/ui/E-TYP/E-TYP-2055.cursive
// RUN: compile-fail
// DIAG: E-TYP-2055
// SPEC: 8.15
// DESC: Transition body returns value not matching declared target state

modal Counter {
    state Zero {}
    state NonZero { value: i32 }

    transition Zero -> NonZero increment(~) {
        return Counter@Zero{}  //~ ERROR E-TYP-2055: transition body state mismatch
    }
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
